<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_contact"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars = "vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navigation_create">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:scrollbars = "vertical"
        >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                />

            <EditText
                android:id="@+id/c_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:inputType="textPersonName"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                >

                <requestFocus></requestFocus>
            </EditText>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            />

        <EditText
            android:id="@+id/c_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            >
        </EditText>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            />

        <EditText
            android:id="@+id/c_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="phone"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                />

            <EditText
                android:id="@+id/c_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:inputType="textEmailAddress"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                />
        </TableRow>

    </TableLayout>
    </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/navigation_create"
        android:background="@color/design_default_color_background"
        >
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>