<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contacts"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll"
        android:layout_above="@+id/navigation"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                />

            <EditText
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:inputType="textPersonName"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:enabled="false"
                >

            </EditText>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                />

            <EditText
                android:id="@+id/result1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:enabled="false"
                >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_call"
                android:layout_marginTop="24dp"
                android:onClick="call"
                />

            <EditText
                android:id="@+id/result2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:inputType="phone"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:enabled="false"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email_black_24dp"
                android:layout_marginTop="24dp"
                android:onClick="sendEmail"
                />

            <EditText
                android:id="@+id/result3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:inputType="textEmailAddress"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:enabled="false"
                />
        </TableRow>

            <TableLayout
                android:id="@+id/sms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                >

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sms_text"
                    android:hint="@string/enter_sms"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:background="@android:drawable/edit_text"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_sms"
                    android:id="@+id/send_sms"
                    android:onClick="send"
                    android:src="@android:drawable/ic_menu_send"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    />

            </TableLayout>

        </TableLayout>

    </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/navigation"
        android:background="@color/design_default_color_background"
        >

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>